--- a/10/2_use_facts.yml
+++ b/10/2_use_facts.yml
@@ -3,6 +3,7 @@
 - name: Refresh fact cache
   hosts: all
   gather_facts: false
+  order: sorted
   tasks:
   - name: display a fact using cache
     debug: 
